--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
         <div class="quadradinho2" id="squares2">
         </div>
 
+        <!--<div class="disclaimer" id="disc" onclick="mostrarTexto()" >< Disclaimer > </div>-->
+
+        <!--<div class="txt-disclaimer" id="txt-D">Não clique no botão de skip e dê play logo em seguida!</div>-->
+
     </main>
     <footer>
     </footer>
